# npc-sim

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  run_diagnostic.py  server.py  test_llm_smoke.py  walkthrough.md
Runtime/Core/: SimRng.cs  SimVector3.cs  SimulationClock.cs  SimulationConfig.cs
Runtime/Decisions/: ActionContext.cs  ActionLibrary.cs  AttackAction.cs  DecisionSystem.cs  EatAction.cs  FleeAction.cs  GatherAction.cs  HealAction.cs  IAction.cs  PrayAction.cs  SleepAction.cs  SocializeAction.cs  TradeAction.cs  UtilityEvaluator.cs  WalkToAction.cs  WorkAction.cs
Runtime/Events/: SimEvent.cs
Runtime/NPC/: BeliefNode.cs  BeliefSystem.cs  ISimWorld.cs  NPC.cs  NPCFactory.cs  NPCGoals.cs  NPCIdentity.cs  NPCInventory.cs  NPCMemory.cs  NPCPsychology.cs  NPCSchedule.cs  NPCSocial.cs  NPCTraits.cs  (+3 more)
Stateful_NPC/: README.md  llm_data_spec.md  newgen-rpg.ipynb
docs/: architecture.md  bugs_and_issues.md  dataset_training.md  glossary.md  integration_map.md  llm_data_spec.md  llm_pipeline.md  nextsteps.md  psychology_model.md  v1_6_0_plan.md
notebooks/: newgen-rpg.ipynb
npc_sim/: __init__.py
static/: app.js  index.html  style.css
tests/: test_belief_eviction.py  test_config_no_llm_tick.py  test_dual_llm_backend.py  test_faction_cleanup.py  test_faction_disposition.py  test_invariants.py  test_inventory_cap.py  test_logger_rotation.py  test_memory_decay.py  test_queue_preemption.py  test_relation_eviction.py  test_reputation_reads.py  test_trade_beliefs.py  test_trait_coherence.py  test_work_beliefs.py  test_work_efficiency.py
(+62 files in other folders)
