[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "npc-sim"
version = "1.0.3"
description = "A deterministic, psychology-driven agent-based simulation framework for emergent NPC behavior research."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Sadık Abdusselam Albayrak"}
]
keywords = [
    "simulation", "agent-based-model", "abm", "npc", "utility-ai",
    "big-five", "psychology", "deterministic", "emergent-behavior"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "flask>=3.0",
    "flask-socketio>=5.3",
    "simple-websocket>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
include = ["npc_sim*"]
